--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4254792976" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?463524576" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -80,7 +80,7 @@
      </div>
      <div class="clearfix grpelem" id="pbuttonu1608"><!-- column -->
       <div class="Button shadow rounded-corners colelem" id="buttonu1608"><!-- container box --></div>
-      <div class="Button shadow rounded-corners colelem" id="buttonu1806"><!-- container box --></div>
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu1806" href="awakening--wallpaper-set.html"><!-- container box --></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pbuttonu1462"><!-- group -->
@@ -100,39 +100,35 @@
      <div class="Button shadow rounded-corners grpelem" id="buttonu2135"><!-- container box --></div>
      <div class="Button shadow rounded-corners grpelem" id="buttonu2082"><!-- container box --></div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu1820"><!-- group -->
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1820"><!-- container box --></div>
-     <div class="Button shadow rounded-corners grpelem" id="buttonu2121"><!-- container box --></div>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu2014"><!-- group -->
-     <div class="Button shadow rounded-corners grpelem" id="buttonu2014"><!-- container box --></div>
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1985"><!-- container box --></div>
-    </div>
     <div class="clearfix colelem" id="pbuttonu1792"><!-- group -->
      <div class="Button shadow rounded-corners grpelem" id="buttonu1792"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu2121"><!-- container box --></div>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu2028"><!-- group -->
      <div class="Button shadow rounded-corners grpelem" id="buttonu2028"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu2014"><!-- container box --></div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu2101"><!-- group -->
-     <div class="Button shadow rounded-corners grpelem" id="buttonu2101"><!-- container box --></div>
+    <div class="clearfix colelem" id="pbuttonu1820"><!-- group -->
+     <div class="Button shadow rounded-corners grpelem" id="buttonu1820"><!-- container box --></div>
      <div class="Button shadow rounded-corners grpelem" id="buttonu2042"><!-- container box --></div>
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1156"><!-- container box --></div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu876"><!-- group -->
-     <div class="Button shadow rounded-corners grpelem" id="buttonu876"><!-- container box --></div>
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1130"><!-- container box --></div>
+    <div class="clearfix colelem" id="pbuttonu913"><!-- group -->
      <div class="Button shadow rounded-corners grpelem" id="buttonu913"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu1156"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu2101"><!-- container box --></div>
     </div>
     <div class="clearfix colelem" id="pbuttonu1999"><!-- group -->
      <div class="Button shadow rounded-corners grpelem" id="buttonu1999"><!-- container box --></div>
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1834"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu876"><!-- container box --></div>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu1130"><!-- container box --></div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu1861"><!-- group -->
-     <div class="Button shadow rounded-corners grpelem" id="buttonu1861"><!-- container box --></div>
+    <div class="clearfix colelem" id="pbuttonu1834"><!-- group -->
+     <div class="Button shadow rounded-corners grpelem" id="buttonu1834"><!-- container box --></div>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1731" href="cinayet-b%c3%bcro--badge.html"><!-- container box --></a>
     </div>
     <div class="clearfix colelem" id="pbuttonu1750"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1750" href="air-force--badge.html"><!-- container box --></a>
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu891" href="spiderling--mecha-concept.html"><!-- container box --></a>
+     <div class="Button shadow rounded-corners grpelem" id="buttonu1861"><!-- container box --></div>
     </div>
     <div class="clearfix colelem" id="pbuttonu1915"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1915" href="zebra--wallpaper.html"><!-- container box --></a>
@@ -156,8 +152,6 @@
    <img class="preload" src="images/follow2.gif" alt=""/>
    <img class="preload" src="images/awake_2.jpg" alt=""/>
    <img class="preload" src="images/awake_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/awake_1.jpg" alt=""/>
-   <img class="preload" src="images/awake_1_2x.jpg" alt=""/>
    <img class="preload" src="images/eki_2.jpg" alt=""/>
    <img class="preload" src="images/eki_1.jpg" alt=""/>
    <img class="preload" src="images/pray_2.jpg" alt=""/>
@@ -184,50 +178,44 @@
    <img class="preload" src="images/zabit2_1.jpg" alt=""/>
    <img class="preload" src="images/annual_2.jpg" alt=""/>
    <img class="preload" src="images/annual_1.jpg" alt=""/>
-   <img class="preload" src="images/hobbit_2.jpg" alt=""/>
-   <img class="preload" src="images/hobbit_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/hobbit_1.jpg" alt=""/>
-   <img class="preload" src="images/hobbit_1_2x.jpg" alt=""/>
-   <img class="preload" src="images/zabit1_2.jpg" alt=""/>
-   <img class="preload" src="images/zabit1_1.jpg" alt=""/>
-   <img class="preload" src="images/samer_2.jpg" alt=""/>
-   <img class="preload" src="images/samer_1.jpg" alt=""/>
-   <img class="preload" src="images/mech_2.jpg" alt=""/>
-   <img class="preload" src="images/mech_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/mech_1.jpg" alt=""/>
-   <img class="preload" src="images/mech_1_2x.jpg" alt=""/>
    <img class="preload" src="images/rank_2.jpg" alt=""/>
    <img class="preload" src="images/rank_2_2x.jpg" alt=""/>
    <img class="preload" src="images/rank_1.jpg" alt=""/>
    <img class="preload" src="images/rank_1_2x.jpg" alt=""/>
+   <img class="preload" src="images/zabit1_2.jpg" alt=""/>
+   <img class="preload" src="images/zabit1_1.jpg" alt=""/>
    <img class="preload" src="images/read_2.jpg" alt=""/>
    <img class="preload" src="images/read_1.jpg" alt=""/>
-   <img class="preload" src="images/bahar_2.jpg" alt=""/>
-   <img class="preload" src="images/bahar_1.jpg" alt=""/>
+   <img class="preload" src="images/samer_2.jpg" alt=""/>
+   <img class="preload" src="images/samer_1.jpg" alt=""/>
+   <img class="preload" src="images/hobbit_2.jpg" alt=""/>
+   <img class="preload" src="images/hobbit_2_2x.jpg" alt=""/>
+   <img class="preload" src="images/hobbit_1.jpg" alt=""/>
+   <img class="preload" src="images/hobbit_1_2x.jpg" alt=""/>
    <img class="preload" src="images/war_2.jpg" alt=""/>
    <img class="preload" src="images/war_1.jpg" alt=""/>
+   <img class="preload" src="images/steam_2.jpg" alt=""/>
+   <img class="preload" src="images/steam_1.jpg" alt=""/>
    <img class="preload" src="images/hotspot_2.jpg" alt=""/>
    <img class="preload" src="images/hotspot_1.jpg" alt=""/>
+   <img class="preload" src="images/bahar_2.jpg" alt=""/>
+   <img class="preload" src="images/bahar_1.jpg" alt=""/>
+   <img class="preload" src="images/cakici_2.jpg" alt=""/>
+   <img class="preload" src="images/cakici_1.jpg" alt=""/>
    <img class="preload" src="images/light_wood_2.jpg" alt=""/>
    <img class="preload" src="images/light_wood_1.jpg" alt=""/>
    <img class="preload" src="images/fl_2.jpg" alt=""/>
    <img class="preload" src="images/fl_1.jpg" alt=""/>
-   <img class="preload" src="images/steam_2.jpg" alt=""/>
-   <img class="preload" src="images/steam_1.jpg" alt=""/>
-   <img class="preload" src="images/cakici_2.jpg" alt=""/>
-   <img class="preload" src="images/cakici_1.jpg" alt=""/>
    <img class="preload" src="images/padme_2.jpg" alt=""/>
    <img class="preload" src="images/padme_2_2x.jpg" alt=""/>
    <img class="preload" src="images/padme_1.jpg" alt=""/>
    <img class="preload" src="images/padme_1_2x.jpg" alt=""/>
+   <img class="preload" src="images/cinayet_2.jpg" alt=""/>
+   <img class="preload" src="images/air_2.jpg" alt=""/>
    <img class="preload" src="images/quor_2.jpg" alt=""/>
    <img class="preload" src="images/quor_2_2x.jpg" alt=""/>
    <img class="preload" src="images/quor_1.jpg" alt=""/>
    <img class="preload" src="images/quor_1_2x.jpg" alt=""/>
-   <img class="preload" src="images/cinayet_2.jpg" alt=""/>
-   <img class="preload" src="images/air_2.jpg" alt=""/>
-   <img class="preload" src="images/spider_2.jpg" alt=""/>
-   <img class="preload" src="images/spider_2_2x.jpg" alt=""/>
    <img class="preload" src="images/zebra_2.jpg" alt=""/>
    <img class="preload" src="images/zebra_2_2x.jpg" alt=""/>
    <img class="preload" src="images/pangea_2.jpg" alt=""/>
@@ -252,24 +240,24 @@
    <img class="preload" src="url("images/annual_1-iebuttonu2082-fr.png")" alt=""/>
    <img class="preload" src="url("images/zabit1_2-iebuttonu2121-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/zabit1_1-iebuttonu2121-fr.png")" alt=""/>
-   <img class="preload" src="url("images/samer_2-iebuttonu2014-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/samer_1-iebuttonu2014-fr.png")" alt=""/>
    <img class="preload" src="url("images/read_2-iebuttonu2028-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/read_1-iebuttonu2028-fr.png")" alt=""/>
-   <img class="preload" src="url("images/bahar_2-iebuttonu2101-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/bahar_1-iebuttonu2101-fr.png")" alt=""/>
+   <img class="preload" src="url("images/samer_2-iebuttonu2014-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/samer_1-iebuttonu2014-fr.png")" alt=""/>
    <img class="preload" src="url("images/war_2-iebuttonu2042-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/war_1-iebuttonu2042-fr.png")" alt=""/>
+   <img class="preload" src="url("images/steam_2-iebuttonu913-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/steam_1-iebuttonu913-fr.png")" alt=""/>
    <img class="preload" src="url("images/hotspot_2-iebuttonu1156-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hotspot_1-iebuttonu1156-fr.png")" alt=""/>
+   <img class="preload" src="url("images/bahar_2-iebuttonu2101-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/bahar_1-iebuttonu2101-fr.png")" alt=""/>
+   <img class="preload" src="url("images/cakici_2-iebuttonu1999-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/cakici_1-iebuttonu1999-fr.png")" alt=""/>
    <img class="preload" src="url("images/light_wood_2-iebuttonu876-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/light_wood_1-iebuttonu876-fr.png")" alt=""/>
    <img class="preload" src="url("images/fl_2-iebuttonu1130-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/fl_1-iebuttonu1130-fr.png")" alt=""/>
-   <img class="preload" src="url("images/steam_2-iebuttonu913-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/steam_1-iebuttonu913-fr.png")" alt=""/>
-   <img class="preload" src="url("images/cakici_2-iebuttonu1999-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/cakici_1-iebuttonu1999-fr.png")" alt=""/>
    <img class="preload" src="url("images/cinayet_2-iebuttonu1731-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/air_2-iebuttonu1750-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/pangea_2-iebuttonu2069-r-fr.png")" alt=""/>
