--- a/ens.html
+++ b/ens.html
@@ -12,14 +12,14 @@
   <title>ens</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/ens.css?4236455870" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/ens.css?76597339" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/RbfJhYGV6Qu-bbTNHfkDpItq3es2qg7NIeZ3EP74pxIfe7qgfHVeVyJGwQMkF263wuNKFcI3FABRFQJh52wkZ2i8wRjUZew3jR63FAZ8wh9DwgGWZAoDpcikOcFzdP37Ocm0SaT1SKoRdhXKIYgkdayTdAIldcNhjPuydYbKfcuuShmzOWFyd1w7fbKVmgMMeMj6MPG4fFSVIMIjgPMgH6qJX3vbMs6gJMI7fbRm2UMgeMw6MPG4fFqVIMIjgkMgP6sFiWF8qMeDaHeXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/ZAZDWZQTWbQx4oQUOYXt7dIMzKlHaGxaJCak8W3F9xSfe7qgfHVeVyJGwQMkF263wuNKFcI3FABRFQJh52wkZ2i8wRjUZew3jR63FAZ8wh9DwgGWZAoDpcikOcFzdP37Ocm0SaT1SKoRdhXKfcuuShmzOWFyd1wKIYgkdayTdAIldcNhjPuydYb7fbRW2UMMeM96MPG4fFwVIMMjMPMgH6qJubvbMg62JMI7fbRZ2UMMeMS6MPG4fJN9IMIjgKMgP6sFiWF8qMYBCHcXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -120,7 +120,7 @@
          <p id="u726-2">STATUS</p>
         </div>
         <div class="clearfix grpelem" id="u294-8"><!-- content -->
-         <p><span title="Concept Design" id="u294">Senior Designer</span><span title="Concept Design" id="u294-2"> </span><span id="u294-5"><a class="nonblock" href="http://edmoware.com" target="_blank" title="Edmoware"><span id="u294-3">@EDMOWARE</span></a></span></p>
+         <p><span title="Concept Design" id="u294">Ninja Designer</span><span title="Concept Design" id="u294-2"> </span><span id="u294-5"><a class="nonblock" href="http://edmoware.com" target="_blank" title="Edmoware"><span id="u294-3">@EDMOWARE</span></a></span></p>
         </div>
        </div>
        <div class="clearfix colelem" id="pu727-4"><!-- group -->
