--- a/leo--wallpaper.html
+++ b/leo--wallpaper.html
@@ -12,14 +12,14 @@
   <title>Leo | Wallpaper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/leo--wallpaper.css?4078965932" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/leo--wallpaper.css?14613179" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/rB9u7oUpRWbxTUXlEnb6nDrq5ubgt4EEgyrPF2-752jfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMiRgRnbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/W0JdEEZSMhul4DZOAN1Wem_5lIfbx8PVW8cYSv2ygkSfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMS-37dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -96,12 +96,12 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/2.png" alt=""/>
-   <img class="preload" src="images/2_2x.png" alt=""/>
-   <img class="preload" src="images/3.png" alt=""/>
-   <img class="preload" src="images/3_2x.png" alt=""/>
-   <img class="preload" src="images/1.png" alt=""/>
-   <img class="preload" src="images/1_2x.png" alt=""/>
+   <img class="preload" src="images/22.png" alt=""/>
+   <img class="preload" src="images/2_2x2.png" alt=""/>
+   <img class="preload" src="images/32.png" alt=""/>
+   <img class="preload" src="images/3_2x2.png" alt=""/>
+   <img class="preload" src="images/12.png" alt=""/>
+   <img class="preload" src="images/1_2x2.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
