--- a/last-sunset--wallpaper.html
+++ b/last-sunset--wallpaper.html
@@ -12,14 +12,14 @@
   <title>Last Sunset | Wallpaper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/last-sunset--wallpaper.css?3804851648" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/last-sunset--wallpaper.css?3816092564" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Mg7tGaQ_XlVx9sPpMZYoOiK0iTKuDSh5-YnJZgtbPfjfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMi1gRnbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/7P4m3ttwNl3_DG3y9yxbS6PCTtQqPoncrkUpwmTwYk9fe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSp37dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -96,12 +96,12 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/2.png" alt=""/>
-   <img class="preload" src="images/2_2x.png" alt=""/>
-   <img class="preload" src="images/3.png" alt=""/>
-   <img class="preload" src="images/3_2x.png" alt=""/>
-   <img class="preload" src="images/1.png" alt=""/>
-   <img class="preload" src="images/1_2x.png" alt=""/>
+   <img class="preload" src="images/22.png" alt=""/>
+   <img class="preload" src="images/2_2x2.png" alt=""/>
+   <img class="preload" src="images/32.png" alt=""/>
+   <img class="preload" src="images/3_2x2.png" alt=""/>
+   <img class="preload" src="images/12.png" alt=""/>
+   <img class="preload" src="images/1_2x2.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
