Page heights fixed

--- a/mystery.html
+++ b/mystery.html
@@ -12,14 +12,14 @@
   <title>Mystery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/mystery.css?3939323398" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/mystery.css?68036279" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/7ry6GdymnMy3_Tmnp4rJpJsFWP4DI-aHW08CAGfY4Fvfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMie37dbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/8Z7WFDHxEvMTPXetYmdSWr3PGGgkD8CjdvxWweEYxSqfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSPt7dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -96,12 +96,12 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/22.png" alt=""/>
-   <img class="preload" src="images/2_2x2.png" alt=""/>
-   <img class="preload" src="images/32.png" alt=""/>
-   <img class="preload" src="images/3_2x2.png" alt=""/>
-   <img class="preload" src="images/12.png" alt=""/>
-   <img class="preload" src="images/1_2x2.png" alt=""/>
+   <img class="preload" src="images/2.png" alt=""/>
+   <img class="preload" src="images/2_2x.png" alt=""/>
+   <img class="preload" src="images/3.png" alt=""/>
+   <img class="preload" src="images/3_2x.png" alt=""/>
+   <img class="preload" src="images/1.png" alt=""/>
+   <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
