--- a/padme--wallpaper.html
+++ b/padme--wallpaper.html
@@ -12,14 +12,14 @@
   <title>Padme | Wallpaper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/padme--wallpaper.css?4266124558" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/padme--wallpaper.css?4072176020" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/7tqGMu6z8BE4Rcu8CMwNC82Xv6eoUe8E7Pc6OAd1gmJfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSk37dbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/pG6XLu8p9Swe0YM57nN8PGTu4apWwTAVer0VEnfzAsjfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMdrt7dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -96,12 +96,12 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/22.png" alt=""/>
-   <img class="preload" src="images/2_2x2.png" alt=""/>
-   <img class="preload" src="images/32.png" alt=""/>
-   <img class="preload" src="images/3_2x2.png" alt=""/>
-   <img class="preload" src="images/12.png" alt=""/>
-   <img class="preload" src="images/1_2x2.png" alt=""/>
+   <img class="preload" src="images/2.png" alt=""/>
+   <img class="preload" src="images/2_2x.png" alt=""/>
+   <img class="preload" src="images/3.png" alt=""/>
+   <img class="preload" src="images/3_2x.png" alt=""/>
+   <img class="preload" src="images/1.png" alt=""/>
+   <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
