--- a/smaug--typography.html
+++ b/smaug--typography.html
@@ -12,14 +12,14 @@
   <title>Smaug | Typography</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/smaug--typography.css?3887570021" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/smaug--typography.css?3960040331" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/8b3Fyv1ME8F9lB1Gs6nUFiKEqS_t90bZLwfi00NnylMfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMiK37dbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/kgA8HTQcS_KEtwEe3tKL141b23clXcuuhXaG5oLhr3Gfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSct7dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -113,12 +113,12 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/22.png" alt=""/>
-   <img class="preload" src="images/2_2x2.png" alt=""/>
-   <img class="preload" src="images/32.png" alt=""/>
-   <img class="preload" src="images/3_2x2.png" alt=""/>
-   <img class="preload" src="images/12.png" alt=""/>
-   <img class="preload" src="images/1_2x2.png" alt=""/>
+   <img class="preload" src="images/2.png" alt=""/>
+   <img class="preload" src="images/2_2x.png" alt=""/>
+   <img class="preload" src="images/3.png" alt=""/>
+   <img class="preload" src="images/3_2x.png" alt=""/>
+   <img class="preload" src="images/1.png" alt=""/>
+   <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
