Light Wood Icon Updated

--- a/light-wood--icon.html
+++ b/light-wood--icon.html
@@ -12,14 +12,14 @@
   <title>Light Wood | Icon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/light-wood--icon.css?3844657084" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/light-wood--icon.css?336473045" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/GCqvF-HkQ0FHaeqS5Yyz3p7F-swMw9mkhoTI05BcjuXfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSft7dbB.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/51IVmsPlWlbcMfcMqDxu9JhDzYX0iGYaWqxd68_Ulawfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMSVQ0dbB.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -87,13 +87,13 @@
     </div>
     <div class="shadow gradient rounded-corners clearfix colelem" id="u2980"><!-- group -->
      <div class="clip_frame grpelem" id="u2975"><!-- image -->
-      <img class="block" id="u2975_img" src="images/lightwood_512x512x32.png" data-hidpi-src="images/lightwood_512x512x32_2x.png" alt="" width="256" height="256"/>
+      <img class="block" id="u2975_img" src="images/512x512.png" data-hidpi-src="images/512x512_2x.png" alt="" width="256" height="256"/>
      </div>
      <div class="clip_frame grpelem" id="u2973"><!-- image -->
-      <img class="block" id="u2973_img" src="images/lightwood_128x128x32.png" data-hidpi-src="images/lightwood_128x128x32_2x.png" alt="" width="64" height="64"/>
+      <img class="block" id="u2973_img" src="images/128x128.png" data-hidpi-src="images/128x128_2x.png" alt="" width="64" height="64"/>
      </div>
      <div class="clip_frame grpelem" id="u2982"><!-- image -->
-      <img class="block" id="u2982_img" src="images/lightwood_48x48x32.png" data-hidpi-src="images/lightwood_48x48x32_2x.png" alt="" width="24" height="24"/>
+      <img class="block" id="u2982_img" src="images/48x48.png" data-hidpi-src="images/48x48_2x.png" alt="" width="24" height="24"/>
      </div>
     </div>
    </div>
@@ -104,17 +104,17 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/2.png" alt=""/>
-   <img class="preload" src="images/2_2x.png" alt=""/>
-   <img class="preload" src="images/3.png" alt=""/>
-   <img class="preload" src="images/3_2x.png" alt=""/>
-   <img class="preload" src="images/1.png" alt=""/>
-   <img class="preload" src="images/1_2x.png" alt=""/>
+   <img class="preload" src="images/22.png" alt=""/>
+   <img class="preload" src="images/2_2x2.png" alt=""/>
+   <img class="preload" src="images/32.png" alt=""/>
+   <img class="preload" src="images/3_2x2.png" alt=""/>
+   <img class="preload" src="images/12.png" alt=""/>
+   <img class="preload" src="images/1_2x2.png" alt=""/>
    <!--[if lt IE 9]>
-   <img class="preload" src="url("images/hover-iebuttonu2313-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/hover-iebuttonu2313-r-fr2.png")" alt=""/>
-   <img class="preload" src="url("images/click-iebuttonu2313-m-fr.png")" alt=""/>
-   <img class="preload" src="url("images/click-iebuttonu2313-m-fr2.png")" alt=""/>
+   <img class="preload" src="url("images/hover-iebuttonu2978-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/hover-iebuttonu2978-r-fr2.png")" alt=""/>
+   <img class="preload" src="url("images/click-iebuttonu2978-m-fr.png")" alt=""/>
+   <img class="preload" src="url("images/click-iebuttonu2978-m-fr2.png")" alt=""/>
    <![endif]-->
   </div>
   <!-- JS includes -->
