Instagram Icon Added

--- a/ens.html
+++ b/ens.html
@@ -12,14 +12,14 @@
   <title>ens</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/ens.css?4034730717" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/ens.css?4092737164" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/x-8CZj9iXDdXqh7JngSUdV3PX_cQJOqBMCEknbr_6bqfe7qgfHVeVyJGwQMkF263wuNKFcI3FABRFQJh52wkZ2i8wRjUZew3jR63FAZ8wh9DwgGWZAoDpcikOcFzdP37Ocm0SaT1SKoRdhXKfcuuShmzOWFyd1wKIYgkdayTdAIldcNhjPuydYb7fbRW2UMMeM96MPG4fFwVIMMjMPMgH6qJubvbMg62JMI7fbRZ2UMMeMS6MPG4fJN9IMIjgKMgP6sFiWF8qMe_0HcXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/8ZrCcThDHzjRiWHu2vQdrf19t0CT3Lh-BI-lWTlL2a9fe7qgfHVeVyJGwQMkF263wuNKFcI3FABRFQJh52wkZ2i8wRjUZew3jR63FAZ8wh9DwgGWZAoDpcikOcFzdP37Ocm0SaT1SKoRdhXKIYgkdayTdAIldcNhjPuydYbKfcuuShmzOWFyd1w7fbKVmgMMeMj6MPG4fFSVIMIjgPMgH6qJX3vbMs6gJMI7fbRm2UMgeMw6MPG4fFqVIMIjgkMgP6sFiWF8qMYUonEXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -129,6 +129,7 @@
         </div>
         <a class="nonblock nontext Button rounded-corners grpelem" id="buttonu2236" href="mailto:enszgr@gmail.com" target="_blank" title="Mail"><!-- container box --></a>
         <a class="nonblock nontext Button rounded-corners grpelem" id="buttonu2293" href="http://twitter.com/enszgr" target="_blank" title="Twitter"><!-- container box --></a>
+        <a class="nonblock nontext Button rounded-corners grpelem" id="buttonu3915" href="https://www.instagram.com/ens.zgr/" target="_blank" title="Instagram"><!-- container box --></a>
         <div class="Button grpelem" id="buttonu2217" title="Facebook"><!-- container box --></div>
         <a class="nonblock nontext Button rounded-corners grpelem" id="buttonu2191" href="http://enszgr.deviantart.com" target="_blank" title="Deviantart"><!-- container box --></a>
         <a class="nonblock nontext Button rounded-corners grpelem" id="buttonu2274" href="http://enszgr.tumblr.com/" target="_blank" title="Tumblr"><!-- container box --></a>
@@ -161,6 +162,12 @@
    <img class="preload" src="images/thin_2x2.png" alt=""/>
    <img class="preload" src="images/normal3.png" alt=""/>
    <img class="preload" src="images/normal_2x3.png" alt=""/>
+   <img class="preload" src="images/2.png" alt=""/>
+   <img class="preload" src="images/2_2x.png" alt=""/>
+   <img class="preload" src="images/3.png" alt=""/>
+   <img class="preload" src="images/3_2x.png" alt=""/>
+   <img class="preload" src="images/1.png" alt=""/>
+   <img class="preload" src="images/1_2x.png" alt=""/>
    <img class="preload" src="images/thick3.png" alt=""/>
    <img class="preload" src="images/thick_2x3.png" alt=""/>
    <img class="preload" src="images/thin3.png" alt=""/>
