--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?4024393485"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3909905613" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3853895887" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/FN_Hry7oAEt8wm-zfbyQTEP7xhzzVKp23modn0S2gpCfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYfX_cXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Jp2ZgYwJ8lvJiv3ouSQh09t38Gnq6OxTPyc750i5FZjfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeYNwPXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,32 +85,33 @@
      <div class="clearfix grpelem" id="ppu732"><!-- column -->
       <div class="clearfix colelem" id="pu732"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="tie-fighters-now--wallpaper.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark--icon.html"><!-- container box --></a>
       </div>
-      <div class="clearfix colelem" id="pbuttonu1608"><!-- group -->
+      <div class="clearfix colelem" id="pbuttonu1717"><!-- group -->
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark--icon.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1608" href="follow--ui.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1895" href="spoils-of-love--wallpaper.html"><!-- container box --></a>
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu1806"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu1895"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1895" href="spoils-of-love--wallpaper.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1806" href="awakening--wallpaper-set.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1462"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1462" href="ekinoks--app-design.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu1848"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1848" href="pray-hard--wallpaper.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1881"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1881" href="sins--wallpaper.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu2056"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu2056" href="bul-bizi--poster.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1779"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1779" href="captain-phasma--wallpaper.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu1765"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1765" href="avengers--wallpaper.html"><!-- container box --></a>
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1971" href="smaug--typography.html"><!-- container box --></a>
     </div>
-    <div class="clearfix colelem" id="pbuttonu2135"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu1971"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1971" href="smaug--typography.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu2135" href="zabit-2014--magazine.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu2082" href="annual-report--print.html"><!-- container box --></a>
     </div>
@@ -160,6 +161,7 @@
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/twitter_app2.jpg" alt=""/>
    <img class="preload" src="images/tie_2.jpg" alt=""/>
    <img class="preload" src="images/tie_2_2x.jpg" alt=""/>
    <img class="preload" src="images/slack_2.jpg" alt=""/>
@@ -215,6 +217,7 @@
    <img class="preload" src="images/1.png" alt=""/>
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
+   <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/follow-iebuttonu1608-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/eki_2-iebuttonu1462-r-fr.png")" alt=""/>
