--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?4024393485"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4270475586" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3821516050" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/VQPFyoYuUCWuYBrxUYzeiQrFziBpvwFJW65aAqZbYFMfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYrKCAXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/OY30Cmr3Og40KpL-iRlUUV7L0ziTBp7G-AXEbfkui_CfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMe5_l7Xgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,14 +85,17 @@
      <div class="clearfix grpelem" id="ppu732"><!-- column -->
       <div class="clearfix colelem" id="pu732"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
+      </div>
+      <div class="clearfix colelem" id="pbuttonu4000"><!-- group -->
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4000" href="star-lord--wallpaper.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
       </div>
-      <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="tie-fighters-now--wallpaper.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark--icon.html"><!-- container box --></a>
-      </div>
      </div>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="tie-fighters-now--wallpaper.html"><!-- container box --></a>
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark--icon.html"><!-- container box --></a>
     </div>
     <div class="clearfix colelem" id="pbuttonu1608"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1608" href="follow--ui.html"><!-- container box --></a>
@@ -164,6 +167,8 @@
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/major_2.jpg" alt=""/>
+   <img class="preload" src="images/major_2_2x.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
