--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3821516050" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?11658536" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/OY30Cmr3Og40KpL-iRlUUV7L0ziTBp7G-AXEbfkui_CfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMe5_l7Xgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/WfEYeY8TZiWnzaIWI02Ts6swSfEA755pTpNR47cZdUbfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYJNi7Xgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,12 +85,13 @@
      <div class="clearfix grpelem" id="ppu732"><!-- column -->
       <div class="clearfix colelem" id="pu732"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4092" href="login-concept--ui.html"><!-- container box --></a>
       </div>
-      <div class="clearfix colelem" id="pbuttonu4000"><!-- group -->
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4000" href="star-lord--wallpaper.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
-      </div>
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4000" href="star-lord--wallpaper.html"><!-- container box --></a>
+     </div>
+     <div class="clearfix grpelem" id="pbuttonu4050"><!-- column -->
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
      </div>
     </div>
     <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
@@ -167,10 +168,11 @@
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/major_2.jpg" alt=""/>
-   <img class="preload" src="images/major_2_2x.jpg" alt=""/>
+   <img class="preload" src="images/login_2.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
+   <img class="preload" src="images/major_2.jpg" alt=""/>
+   <img class="preload" src="images/major_2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
    <img class="preload" src="images/tie_2.jpg" alt=""/>
    <img class="preload" src="images/tie_2_2x.jpg" alt=""/>
@@ -227,6 +229,7 @@
    <img class="preload" src="images/1.png" alt=""/>
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
+   <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/follow-iebuttonu1608-r-fr.png")" alt=""/>
