--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?4024393485"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?11658536" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3986540858" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/WfEYeY8TZiWnzaIWI02Ts6swSfEA755pTpNR47cZdUbfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYJNi7Xgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Sjqp9UDjGPTvmgoQXqvb0JHdA1TyJjWqFDiin2_gcJjfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYq10fXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,26 +85,27 @@
      <div class="clearfix grpelem" id="ppu732"><!-- column -->
       <div class="clearfix colelem" id="pu732"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4092" href="login-concept--ui.html"><!-- container box --></a>
+       <div class="Button shadow rounded-corners grpelem" id="buttonu4121"><!-- container box --></div>
       </div>
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
+     </div>
+     <div class="clearfix grpelem" id="pbuttonu4092"><!-- column -->
+      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4092" href="login-concept--ui.html"><!-- container box --></a>
       <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4000" href="star-lord--wallpaper.html"><!-- container box --></a>
      </div>
-     <div class="clearfix grpelem" id="pbuttonu4050"><!-- column -->
-      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major-marquis--wallpaper.html"><!-- container box --></a>
-      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
-     </div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu3962"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter-app--ui.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="tie-fighters-now--wallpaper.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1717"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark--icon.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu1608"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1608" href="follow--ui.html"><!-- container box --></a>
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1895" href="spoils-of-love--wallpaper.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu1806"><!-- group -->
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1806" href="awakening--wallpaper-set.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1462" href="ekinoks--app-design.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1895"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1895" href="spoils-of-love--wallpaper.html"><!-- container box --></a>
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1806" href="awakening--wallpaper-set.html"><!-- container box --></a>
     </div>
     <div class="clearfix colelem" id="pbuttonu1848"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1848" href="pray-hard--wallpaper.html"><!-- container box --></a>
@@ -168,21 +169,23 @@
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/vakit_2.jpg" alt=""/>
+   <img class="preload" src="images/vakit_1.jpg" alt=""/>
+   <img class="preload" src="images/major_2.jpg" alt=""/>
+   <img class="preload" src="images/major_2_2x.jpg" alt=""/>
    <img class="preload" src="images/login_2.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
-   <img class="preload" src="images/major_2.jpg" alt=""/>
-   <img class="preload" src="images/major_2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
    <img class="preload" src="images/tie_2.jpg" alt=""/>
    <img class="preload" src="images/tie_2_2x.jpg" alt=""/>
    <img class="preload" src="images/slack_2.jpg" alt=""/>
    <img class="preload" src="images/follow.jpg" alt=""/>
+   <img class="preload" src="images/eki_2.jpg" alt=""/>
    <img class="preload" src="images/love_2.jpg" alt=""/>
    <img class="preload" src="images/love_2_2x.jpg" alt=""/>
    <img class="preload" src="images/awake_2.jpg" alt=""/>
    <img class="preload" src="images/awake_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/eki_2.jpg" alt=""/>
    <img class="preload" src="images/pray_2.jpg" alt=""/>
    <img class="preload" src="images/pray_2_2x.jpg" alt=""/>
    <img class="preload" src="images/sins_2.jpg" alt=""/>
@@ -229,6 +232,8 @@
    <img class="preload" src="images/1.png" alt=""/>
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
+   <img class="preload" src="url("images/vakit_2-iebuttonu4121-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/vakit_1-iebuttonu4121-fr.png")" alt=""/>
    <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
